[gd_scene load_steps=8 format=3 uid="uid://dans7ayhtnkyg"]

[ext_resource type="Script" path="res://Scripts/Song1_updated.gd" id="1_8sch5"]
[ext_resource type="AudioStream" uid="uid://c4eegms6ix7cu" path="res://MusicAssets/Icicles_AzakaelasRemix_Mix2.wav" id="2_rhibm"]
[ext_resource type="Texture2D" uid="uid://xv73iswtxltc" path="res://Textures/Diamond.png" id="3_s0brv"]
[ext_resource type="Script" path="res://Scripts/Target.gd" id="4_b826c"]
[ext_resource type="Script" path="res://Scripts/ScoreLabel.gd" id="5_sjmlt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nhexy"]
radius = 121.399

[sub_resource type="Gradient" id="Gradient_ajob7"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_8sch5")
bpm = 105.0
JSON_PATH = "res://Icicles.json"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rhibm")
volume_db = -8.0

[node name="Diamond1" type="Sprite2D" parent="." node_paths=PackedStringArray("music")]
modulate = Color(1, 0, 0, 1)
position = Vector2(421, 981)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_s0brv")
script = ExtResource("4_b826c")
key = "a"
music = NodePath("../Music")

[node name="Area2D" type="Area2D" parent="Diamond1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Diamond1/Area2D"]
visible = false
shape = SubResource("CircleShape2D_nhexy")

[node name="GPUParticles2D" type="CPUParticles2D" parent="Diamond1"]
emitting = false
amount = 32
lifetime = 0.1
one_shot = true
speed_scale = 0.2
explosiveness = 0.16
texture = ExtResource("3_s0brv")
gravity = Vector2(0, -810)
angular_velocity_min = 334.55
angular_velocity_max = 625.46
scale_amount_min = 0.3
scale_amount_max = 0.6
color_ramp = SubResource("Gradient_ajob7")

[node name="Diamond2" type="Sprite2D" parent="." node_paths=PackedStringArray("music")]
modulate = Color(1, 0.466667, 0, 1)
position = Vector2(613, 981)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_s0brv")
script = ExtResource("4_b826c")
key = "s"
music = NodePath("../Music")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Diamond2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Diamond2/Area2D"]
visible = false
shape = SubResource("CircleShape2D_nhexy")

[node name="GPUParticles2D" type="CPUParticles2D" parent="Diamond2"]
emitting = false
amount = 32
lifetime = 0.1
one_shot = true
speed_scale = 0.2
explosiveness = 0.16
texture = ExtResource("3_s0brv")
gravity = Vector2(0, -810)
angular_velocity_min = 334.55
angular_velocity_max = 625.46
scale_amount_min = 0.3
scale_amount_max = 0.6
color_ramp = SubResource("Gradient_ajob7")

[node name="Diamond3" type="Sprite2D" parent="." node_paths=PackedStringArray("music")]
modulate = Color(1, 1, 0, 1)
position = Vector2(805, 981)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_s0brv")
script = ExtResource("4_b826c")
key = "d"
music = NodePath("../Music")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Diamond3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Diamond3/Area2D"]
visible = false
shape = SubResource("CircleShape2D_nhexy")

[node name="GPUParticles2D" type="CPUParticles2D" parent="Diamond3"]
emitting = false
amount = 32
lifetime = 0.1
one_shot = true
speed_scale = 0.2
explosiveness = 0.16
texture = ExtResource("3_s0brv")
gravity = Vector2(0, -810)
angular_velocity_min = 334.55
angular_velocity_max = 625.46
scale_amount_min = 0.3
scale_amount_max = 0.6
color_ramp = SubResource("Gradient_ajob7")

[node name="Diamond4" type="Sprite2D" parent="." node_paths=PackedStringArray("music")]
modulate = Color(0, 1, 0, 1)
position = Vector2(997, 981)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_s0brv")
script = ExtResource("4_b826c")
key = "f"
music = NodePath("../Music")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Diamond4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Diamond4/Area2D"]
visible = false
shape = SubResource("CircleShape2D_nhexy")

[node name="GPUParticles2D" type="CPUParticles2D" parent="Diamond4"]
emitting = false
amount = 32
lifetime = 0.1
one_shot = true
speed_scale = 0.2
explosiveness = 0.16
texture = ExtResource("3_s0brv")
gravity = Vector2(0, -810)
angular_velocity_min = 334.55
angular_velocity_max = 625.46
scale_amount_min = 0.3
scale_amount_max = 0.6
color_ramp = SubResource("Gradient_ajob7")

[node name="Diamond5" type="Sprite2D" parent="." node_paths=PackedStringArray("music")]
modulate = Color(0, 1, 1, 1)
position = Vector2(1189, 981)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_s0brv")
script = ExtResource("4_b826c")
key = "j"
music = NodePath("../Music")

[node name="Area2D" type="Area2D" parent="Diamond5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Diamond5/Area2D"]
visible = false
shape = SubResource("CircleShape2D_nhexy")

[node name="GPUParticles2D" type="CPUParticles2D" parent="Diamond5"]
emitting = false
amount = 32
lifetime = 0.1
one_shot = true
speed_scale = 0.2
explosiveness = 0.16
texture = ExtResource("3_s0brv")
gravity = Vector2(0, -810)
angular_velocity_min = 334.55
angular_velocity_max = 625.46
scale_amount_min = 0.3
scale_amount_max = 0.6
color_ramp = SubResource("Gradient_ajob7")

[node name="Diamond6" type="Sprite2D" parent="." node_paths=PackedStringArray("music")]
modulate = Color(0.329412, 0.529412, 1, 1)
position = Vector2(1381, 981)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_s0brv")
script = ExtResource("4_b826c")
key = "k"
music = NodePath("../Music")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Diamond6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Diamond6/Area2D"]
visible = false
shape = SubResource("CircleShape2D_nhexy")

[node name="GPUParticles2D" type="CPUParticles2D" parent="Diamond6"]
emitting = false
amount = 32
lifetime = 0.1
one_shot = true
speed_scale = 0.2
explosiveness = 0.16
texture = ExtResource("3_s0brv")
gravity = Vector2(0, -810)
angular_velocity_min = 334.55
angular_velocity_max = 625.46
scale_amount_min = 0.3
scale_amount_max = 0.6
color_ramp = SubResource("Gradient_ajob7")

[node name="Diamond7" type="Sprite2D" parent="." node_paths=PackedStringArray("music")]
modulate = Color(0.556863, 0, 1, 1)
position = Vector2(1573, 981)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_s0brv")
script = ExtResource("4_b826c")
key = "l"
music = NodePath("../Music")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Diamond7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Diamond7/Area2D"]
visible = false
shape = SubResource("CircleShape2D_nhexy")

[node name="GPUParticles2D" type="CPUParticles2D" parent="Diamond7"]
emitting = false
amount = 32
lifetime = 0.1
one_shot = true
speed_scale = 0.2
explosiveness = 0.16
texture = ExtResource("3_s0brv")
gravity = Vector2(0, -810)
angular_velocity_min = 334.55
angular_velocity_max = 625.46
scale_amount_min = 0.3
scale_amount_max = 0.6
color_ramp = SubResource("Gradient_ajob7")

[node name="Diamond8" type="Sprite2D" parent="." node_paths=PackedStringArray("music")]
modulate = Color(1, 0, 1, 1)
position = Vector2(1765, 981)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_s0brv")
script = ExtResource("4_b826c")
key = ";"
music = NodePath("../Music")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Diamond8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Diamond8/Area2D"]
visible = false
shape = SubResource("CircleShape2D_nhexy")

[node name="GPUParticles2D" type="CPUParticles2D" parent="Diamond8"]
emitting = false
amount = 32
lifetime = 0.1
one_shot = true
speed_scale = 0.2
explosiveness = 0.16
texture = ExtResource("3_s0brv")
gravity = Vector2(0, -810)
angular_velocity_min = 334.55
angular_velocity_max = 625.46
scale_amount_min = 0.3
scale_amount_max = 0.6
color_ramp = SubResource("Gradient_ajob7")

[node name="Spawner1" type="Node2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(421, 16)
scale = Vector2(0.75, 0.75)
metadata/_edit_group_ = true

[node name="Spawner2" type="Node2D" parent="."]
modulate = Color(1, 0.498039, 0, 1)
position = Vector2(613, 16)
scale = Vector2(0.75, 0.75)
metadata/_edit_group_ = true

[node name="Spawner3" type="Node2D" parent="."]
modulate = Color(1, 1, 0, 1)
position = Vector2(805, 16)
scale = Vector2(0.75, 0.75)
metadata/_edit_group_ = true

[node name="Spawner4" type="Node2D" parent="."]
modulate = Color(0, 1, 0, 1)
position = Vector2(997, 16)
scale = Vector2(0.75, 0.75)
metadata/_edit_group_ = true

[node name="Spawner5" type="Node2D" parent="."]
modulate = Color(0, 1, 1, 1)
position = Vector2(1192, 16)
scale = Vector2(0.75, 0.75)
metadata/_edit_group_ = true

[node name="Spawner6" type="Node2D" parent="."]
modulate = Color(0, 0.360784, 1, 1)
position = Vector2(1384, 16)
scale = Vector2(0.75, 0.75)
metadata/_edit_group_ = true

[node name="Spawner7" type="Node2D" parent="."]
modulate = Color(0.498039, 0, 1, 1)
position = Vector2(1576, 16)
scale = Vector2(0.75, 0.75)
metadata/_edit_group_ = true

[node name="Spawner8" type="Node2D" parent="."]
modulate = Color(1, 0, 1, 1)
position = Vector2(1768, 16)
scale = Vector2(0.75, 0.75)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="."]
offset_top = 16.0
offset_right = 275.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 48
text = "SCORE: 0"
script = ExtResource("5_sjmlt")

[connection signal="finished" from="Music" to="." method="_on_music_finished"]
[connection signal="area_entered" from="Diamond1/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Diamond1/Area2D" to="Diamond1" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Diamond1/Area2D" to="Diamond1" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Diamond2/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Diamond2/Area2D" to="Diamond2" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Diamond2/Area2D" to="Diamond2" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Diamond3/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Diamond3/Area2D" to="Diamond3" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Diamond3/Area2D" to="Diamond3" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Diamond4/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Diamond4/Area2D" to="Diamond4" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Diamond4/Area2D" to="Diamond4" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Diamond5/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Diamond5/Area2D" to="Diamond5" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Diamond5/Area2D" to="Diamond5" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Diamond6/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Diamond6/Area2D" to="Diamond6" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Diamond6/Area2D" to="Diamond6" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Diamond7/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Diamond7/Area2D" to="Diamond7" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Diamond7/Area2D" to="Diamond7" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Diamond8/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Diamond8/Area2D" to="Diamond8" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Diamond8/Area2D" to="Diamond8" method="_on_area_2d_area_exited"]
